--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,8 +34,9 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.code.gson:gson:2.7'
     testCompile 'junit:junit:4.12'
-    compile 'com.squareup.okhttp3:okhttp:3.8.1'
+    compile 'com.github.vpaliyX:ChipsLover:v1.2'
 }
 repositories {
     mavenCentral()
+    maven { url 'https://jitpack.io' }
 }
